
    o	- and Ops methods for POSIX[cl]t objects are removed: the
	POSIXt methods have been used since 1.3.0.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are deprecated.

    o	Classes "lm.null" and "glm.null" are deprecated and all of their
	methods have been removed.

    o	Method weights.lm(), a copy of weights.default(), has been removed.


INSTALLATION CHANGES

    o	The zlib code in the sources is used unless the external
	version found is at least version 1.1.4 (up from 1.1.3).

    o	The regression checks now have to be passed exactly, except
	those depending on recommended packages (which cannot be
	assumed to be present).

    o	There are new macros DYLIB_* for building dynamic libraries,
	and these are used for the dynamic Rmath library (which was
	previously built as a shared object).


UTILITIES

    o	R CMD build excludes possible (obsolete) data and vignette
        indices in DCF format (and hence also no longer rebuilds them).

    o	R CMD check now tests whether file names are valid across file
	systems and supported operating system platforms.  Replacement
	functions and S3 methods in \usage sections are no longer
	ignored.

    o	R CMD Rdindex has been removed.


BUG FIXES

    o	pnorm(x, 1, 0) does not give NaN anymore;
	also, pnorm(x, m, s=Inf) == lim{s -> Inf} pnorm(x,m,s).
	Similar changes for dnorm(), cf PR#1218.

    o	data.matrix() was documented to replace factors by their
	codes, but in fact re-coded into the alphabetical ordering of
	the levels.

    o	methods() and getS3method() find methods if the generic
	dispatches on a name other than its own.  (The cases of
	coefficients() and fitted.values() were fixed in 1.7.1.)

    o   body() and formals() were looking for named functions in
	different places: they now both look starting at the
	environment in which they are called.  Several documentation
	errors for these functions have been corrected.

    o   as.double(list()) etc was regarded as an error, because of a